// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAbilityByFuzzy GIVEN a fuzzy ability THEN returns JSONObject 1`] = `
Object {
  "getAbilityByFuzzy": Array [
    Object {
      "item": Object {
        "name": "Multiscale",
        "shortDesc": "If this Pokémon is at full HP, damage taken from attacks is halved.",
      },
      "refIndex": 134,
    },
    Object {
      "item": Object {
        "name": "Multitype",
        "shortDesc": "If this Pokémon is an Arceus, its type changes to match its held Plate or Z-Crystal.",
      },
      "refIndex": 135,
    },
  ],
}
`;

exports[`getAbilityByFuzzy GIVEN a fuzzy ability and pagination THEN returns JSONObject 1`] = `
Object {
  "getAbilityByFuzzy": Array [
    Object {
      "item": Object {
        "name": "Multiscale",
        "shortDesc": "If this Pokémon is at full HP, damage taken from attacks is halved.",
      },
      "refIndex": 134,
    },
  ],
}
`;

exports[`getAbilityByFuzzy GIVEN a valid ability THEN returns JSONObject 1`] = `
Object {
  "getAbilityByFuzzy": Array [
    Object {
      "item": Object {
        "name": "Multiscale",
        "shortDesc": "If this Pokémon is at full HP, damage taken from attacks is halved.",
      },
      "refIndex": 134,
    },
  ],
}
`;

exports[`getAbilityByFuzzy GIVEN an invalid ability THEN returns empty array 1`] = `
Object {
  "getAbilityByFuzzy": Array [],
}
`;

exports[`getAbilityByFuzzy GIVEN an invalid ability and pagination THEN returns empty array 1`] = `
Object {
  "getAbilityByFuzzy": Array [],
}
`;

exports[`getAbilityByName GIVEN a valid ability THEN returns JSONObject 1`] = `
Object {
  "getAbilityByName": Object {
    "name": "Multiscale",
    "shortDesc": "If this Pokémon is at full HP, damage taken from attacks is halved.",
  },
}
`;

exports[`getAbilityByName GIVEN an invalid ability THEN returns error 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$ability" got invalid value "totally_invalid_ability"; Value "totally_invalid_ability" does not exist in "Abilities" enum.],
  ],
}
`;

exports[`getAbilityDetailsByFuzzy GIVEN a fuzzy ability THEN returns AbilityEntry 1`] = `
Object {
  "getAbilityDetailsByFuzzy": Object {
    "name": "Multiscale",
  },
}
`;

exports[`getAbilityDetailsByFuzzy GIVEN a fuzzy ability and pagination THEN returns AbilityEntry 1`] = `
Object {
  "getAbilityDetailsByFuzzy": Object {
    "name": "Multitype",
  },
}
`;

exports[`getAbilityDetailsByFuzzy GIVEN a valid ability THEN returns AbilityEntry 1`] = `
Object {
  "getAbilityDetailsByFuzzy": Object {
    "name": "Multiscale",
  },
}
`;

exports[`getAbilityDetailsByFuzzy GIVEN an invalid ability THEN returns error 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Failed to get data for ability: totally_invalid_ability],
  ],
}
`;

exports[`getAbilityDetailsByFuzzy GIVEN an invalid ability and pagination THEN returns error 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Failed to get data for ability: totally_invalid_ability],
  ],
}
`;

exports[`getAbilityDetailsByName GIVEN a valid ability THEN returns AbilityEntry 1`] = `
Object {
  "getAbilityDetailsByName": Object {
    "name": "Multiscale",
  },
}
`;

exports[`getAbilityDetailsByName GIVEN an invalid ability THEN returns error 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$ability" got invalid value "totally_invalid_ability"; Value "totally_invalid_ability" does not exist in "Abilities" enum.],
  ],
}
`;
